Implementación completa de flujo de surtido con trazabilidad y auditoría